@@ -1,0 +1,2 @@
+gnome-colors-*.tar.gz
+shiki-colors-*.tar.gz
