@@ -1,0 +1,138 @@
+#!/bin/sh
+
+# Slackware build script for GNOME-Colors
+
+# Copyright (c) 2010  Eugene Wissner <belka.ew@gmail.com>
+# All rights reserved.
+#
+# Redistribution and use in source and binary forms, with or without
+# modification, are permitted provided that the following conditions are
+# met:
+#
+# * Redistributions of source code must retain the above copyright
+#   notice, this list of conditions and the following disclaimer.
+#
+# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+# LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
+# A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
+# OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
+# LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
+# DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
+# THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
+# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+
+# Modified by the SlackBuilds.org project
+#
+# Modified by Niki Kovacs <info@microlinux.fr>
+
+PRGNAM=gnome-colors
+VERSION=${VERSION:-5.5.1}
+BUILD=${BUILD:-2}
+TAG=${TAG:-_microlinux}
+
+ARCH=noarch
+
+CWD=$(pwd)
+TMP=${TMP:-/tmp/microlinux}
+PKG=$TMP/package-$PRGNAM
+OUTPUT=${OUTPUT:-/tmp}
+
+# The following colors are available:
+# brave:  	blue
+# dust:	 	chocolate
+# human: 	orange
+# illustrious: 	pink
+# noble: 	purple
+# wine:		red
+# wise:		green
+#
+# These two themes are from gnome-colors-extras. If you don't want to
+# install them, don't worry, leave the second array so and simply
+# don't download gnome-colors-extras.
+# carbonite:	dark-grow
+# tribute:	light-grow
+#
+# You can also put shiki-colors in the directory to install the
+# gtk and xfwm themes.
+
+# If you don't want all of these installed, edit the following arrays
+# to only include those you would like to install.
+COLORS="brave"
+COLORS_EXTRAS=""
+SHIKI_VERSION=${SHIKI_VERSION:-4.6}
+
+set -e
+
+if [ ! -r $PRGNAM-$VERSION.tar.gz ] ; then
+   wget -c http://gnome-colors.googlecode.com/files/$PRGNAM-$VERSION.tar.gz
+fi
+
+md5sum -c $PRGNAM-$VERSION.tar.gz.md5
+
+if [ ! -r $PRGNAM-extras-$VERSION.tar.gz ] ; then
+   wget -c http://gnome-colors.googlecode.com/files/$PRGNAM-extras-$VERSION.tar.gz
+fi
+
+md5sum -c $PRGNAM-extras-$VERSION.tar.gz.md5
+
+if [ ! -r shiki-colors-$SHIKI_VERSION.tar.gz ] ; then
+   wget -c http://gnome-colors.googlecode.com/files/shiki-colors-$SHIKI_VERSION.tar.gz
+fi
+
+md5sum -c shiki-colors-$SHIKI_VERSION.tar.gz.md5
+
+rm -rf $PKG $TMP/$PRGNAM-$VERSION
+mkdir -p $PKG $OUTPUT $TMP/$PRGNAM-$VERSION
+
+cd $TMP/$PRGNAM-$VERSION
+tar xvf $CWD/gnome-colors-$VERSION.tar.gz
+
+if [ -e "$CWD/gnome-colors-extras-$VERSION.tar.gz" ] ; then
+  tar xvf $CWD/gnome-colors-extras-$VERSION.tar.gz
+  COLORS=${COLORS}" "${COLORS_EXTRAS}
+fi
+
+chown -R root:root .
+find -L . \
+  \( -perm 777 -o -perm 775 -o -perm 750 -o -perm 711 -o -perm 555 -o -perm 511 \) \
+    -exec chmod 755 {} \; -o \
+  \( -perm 666 -o -perm 664 -o -perm 600 -o -perm 444 -o -perm 440 -o -perm 400 \) \
+    -exec chmod 644 {} \;
+
+# Install icons
+for j in ${COLORS}; do
+  make DESTDIR="$PKG" install-gnome-${j}
+done
+
+mkdir -p $PKG/usr/doc/$PRGNAM-$VERSION
+cp -a \
+  AUTHORS COPYING ChangeLog README \
+    $PKG/usr/doc/$PRGNAM-$VERSION
+cat $CWD/$PRGNAM.SlackBuild > $PKG/usr/doc/$PRGNAM-$VERSION/$PRGNAM.SlackBuild
+
+# Install shiki-colors 
+rm -rf *
+if [ -e "$CWD/shiki-colors-$SHIKI_VERSION.tar.gz" ] ; then
+	tar xvf $CWD/shiki-colors-$SHIKI_VERSION.tar.gz
+	chown -R root:root .
+	find -L . \
+	  \( -perm 777 -o -perm 775 -o -perm 750 -o -perm 711 -o -perm 555 -o -perm 511 \) \
+	    -exec chmod 755 {} \; -o \
+	  \( -perm 666 -o -perm 664 -o -perm 600 -o -perm 444 -o -perm 440 -o -perm 400 \) \
+	    -exec chmod 644 {} \;
+	make DESTDIR="$PKG" install
+fi
+
+mkdir -p $PKG/install
+cat $CWD/slack-desc > $PKG/install/slack-desc
+cat $CWD/doinst.sh > $PKG/install/doinst.sh
+
+cd $PKG
+/sbin/makepkg -l y -c n $OUTPUT/$PRGNAM-$VERSION-$ARCH-$BUILD$TAG.${PKGTYPE:-txz}
+
+# Cleanup
+cd $TMP
+rm -rf $PRGNAM-$VERSION $PKG
