@@ -25,7 +25,7 @@
 
 PRGNAM=eurostile-fonts
 VERSION=${VERSION:-1.0}	 
-BUILD=${BUILD:-1}
+BUILD=${BUILD:-2}
 TAG=${TAG:-_microlinux}		
 
 ARCH=noarch 
