@@ -26,7 +26,7 @@
 
 PRGNAM=google-droid-fonts
 VERSION=${VERSION:-20100409}
-BUILD=${BUILD:-1}
+BUILD=${BUILD:-2}
 TAG=${TAG:-_microlinux}
 
 ARCH=noarch
