@@ -10,7 +10,7 @@
 PRGNAM=webcore-fonts
 VERSION=${VERSION:-3.0}
 ARCH=noarch
-BUILD=${BUILD:-1}
+BUILD=${BUILD:-2}
 TAG=${TAG:-_microlinux}
 
 CWD=$(pwd)
