@@ -39,6 +39,10 @@ multimedia/gst1-plugins-bad-1.2.2-i486-2_microlinux.txz: Rebuilt.
 multimedia/gst1-plugins-ugly-1.2.2-i486-2_microlinux.txz: Rebuilt.
 multimedia/gst1-libav-1.2.2-i486-2_microlinux.txz: Rebuilt.
 multimedia/mutagen-1.22-i486-1_microlinux.txz: Added.
+x/google-droid-fonts-20100409-noarch-2_microlinux.txz: Rebuilt.
+x/webcore-fonts-3.0-noarch-2_microlinux.txz: Rebuilt.
+x/eurostile-fonts-1.0-noarch-2_microlinux.txz: Rebuilt.
+mate/gnome-colors-5.5.1-noarch-2_microlinux.txz: Added.
 +--------------------------+
 Thu Apr 24 07:40:37 CEST 2014
 multimedia/a52dec-0.7.4-i486-2_microlinux.txz: Rebuilt.
